--- a/pom.xml
+++ b/pom.xml
@@ -4,16 +4,41 @@
   <artifactId>mavenTiaa</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+    <properties>
+     <maven.compiler.source>1.8</maven.compiler.source>
+     <maven.compiler.target>1.8</maven.compiler.target>
+    </properties> 
   
- <dependencies>
+<dependencies>
   	<dependency>
 	    <groupId>junit</groupId>
 	    <artifactId>junit</artifactId>
 	    <version>4.12</version>
 	    <scope>test</scope>
 	</dependency>
-</dependencies>
+</dependencies> 
 
-  
+
+<build>
+  <plugins>
+    <plugin>
+      <!-- Build an executable JAR -->
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-jar-plugin</artifactId>
+      <version>3.1.0</version>
+      <configuration>
+        <archive>
+          <manifest>
+            <addClasspath>true</addClasspath>
+            <classpathPrefix>lib/</classpathPrefix>
+            <mainClass>pkg1.MyCalc</mainClass>
+          </manifest>
+        </archive>
+      </configuration>
+    </plugin>
+  </plugins>
+  </build>   
+
+
   
 </project>
