--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,7 @@
   <groupId>com.tiaa</groupId>
   <artifactId>mavenTiaa</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
-    <properties>
+      <properties>
      <maven.compiler.source>1.8</maven.compiler.source>
      <maven.compiler.target>1.8</maven.compiler.target>
     </properties> 
@@ -16,7 +15,27 @@
 	    <version>4.12</version>
 	    <scope>test</scope>
 	</dependency>
+	
+<dependency>
+ <groupId>org.sonarsource.scanner.maven</groupId>
+ <artifactId>sonar-maven-plugin</artifactId>
+ <version>3.9.0.2155</version>
+</dependency>
+	
 </dependencies> 
+
+<profiles>
+        <profile>
+            <id>sonar</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <sonar.host.url> http://localhost:9002 </sonar.host.url>       
+            </properties>
+        </profile>
+</profiles>
+
 
 
 <build>
