--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,16 +1,12 @@
 name: Java CI with Maven
-
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
@@ -21,3 +17,10 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Build and Push by HKS
+      uses: mr-smithers-excellent/docker-build-push@v6
+      with:
+       image: hkshitesh/tiaaimg
+       registry: docker.io
+       username: ${{ secrets.DOCKER_USERNAME }}
+       password: ${{ secrets.DOCKER_PASSWORD }}
